Fix a problem with the tabs CSS that causes the main menu to appear behind it

--- a/root/static/styles/extra/jquery-ui/ui.tabs.css
+++ b/root/static/styles/extra/jquery-ui/ui.tabs.css
@@ -1,7 +1,7 @@
 /* Tabs
 ----------------------------------*/
 .ui-tabs {padding: .2em;}
-.ui-tabs .ui-tabs-nav { padding: .2em .2em 0 .2em;  position: relative; }
+.ui-tabs .ui-tabs-nav { padding: .2em .2em 0 .2em; }
 .ui-tabs .ui-tabs-nav li { float: left; border-bottom: 0 !important; margin: 0 .2em -1px 0; padding: 0; list-style: none; }
 .ui-tabs .ui-tabs-nav li a { display:block; text-decoration: none; padding: .5em 1em; }
 .ui-tabs .ui-tabs-nav li.ui-tabs-selected {  padding-bottom: .1em; border-bottom: 0; }
